# edsp-scrapper

./: .editorconfig  .gitignore  CNAME  LICENSE  README.md  edsp.pbix  index.html  main.py  pyproject.toml  robots.txt  sitemap.xml  test-csv.html
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml  enable-pages.yml  pages.yml  simple-deploy.yml
data/: data.csv
src/application/: __init__.py  scraper.py  services.py
src/domain/: __init__.py  entities.py
src/infrastructure/: __init__.py  browser.py  logger.py  storage.py
