[tool.poetry]
name = "edsp-web-scrapper"
version = "1.0.0"
description = "Web scraper for extracting school data from EDSP with parallel processing and batch capabilities"
authors = ["Felipe Versiane <felipeversiane09@gmail.com>"]
readme = "README.md"
package-mode = false
include = ["src"]

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
aiohttp = "^3.9.0"
python-dotenv = "^1.0.0"
tenacity = "^8.2.0"
pydantic = "^2.5.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
